# llimit

./: .cursorrules  .dockerignore  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  task_execution_candidates.md  utils.py
app/: settings.py
app/api/: dependencies.py
app/core/: context.py
app/db/: allowed_models_repo.py  api_key_repo.py  chat_repo.py  database.py  file_repo.py  task_cost_repo.py  task_repo.py  user_repo.py
app/events/: completion_events.py  new_llm_message.py  new_llm_message_chunk.py  sse_event.py  task_events.py  thread_created.py
app/middleware/: auth.py
app/models/: api_key.py  user.py
app/services/: api_key_service.py  auth_service.py  chat_service.py  completion_stream_service.py  config_helpers.py  file_metadata_processing_service.py  file_service.py  llm_logging_service.py  llm_service.py  llm_service_base.py  memory_service.py  model_cache_service.py  office_conversion_service.py  pdf_analysis_service.py  prompt_pricing_service.py  sse_service.py  task_creation_service.py  task_decomposition_service.py  task_errors.py  task_model_selection_service.py  task_query_service.py  task_service.py  task_step_execution_service.py  tokenization_service.py  user_service.py  work_queue_service.py
evaluation/: evaluate.py
evaluation/gaia/: loader.py  models.py  scoring.py  tools.py
prompts/: chat_prompts.py  llm_base_prompts.py  task_prompts.py
request_data/: FILES_API_EXAMPLES.md  completions.json  create_task.json  create_thread.json  post_message.json  register_file_url.json  set_allowed_models.json  test_file.txt
(+53 files in other folders)
