[project]
name = "llimit"
version = "0.1.0"
description = "Backend stuff for LLM tools"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.118.0",
    "httpx>=0.27.0",
    "openai>=2.0.1",
    "uvicorn>=0.30.0",
    "pydantic-settings>=2.0.0",
    "python-multipart>=0.0.20",
    "tiktoken>=0.12.0",
    "pypdf>=6.7.0",
]
